heat-tempest-plugin: add 0001-Add-endpoint_type-config-option.patch
adding https://review.openstack.org/#/c/530460/ as a patch this is
didn't get part of the 0.1.0 release. It's required for running tempest
against a non-public endpoint.

Change-Id: Ia1eaccf10f17788cffdf61c5c4c4b850c1ae561c

--- a/openstack/heat-tempest-plugin/heat-tempest-plugin.spec.j2
+++ b/openstack/heat-tempest-plugin/heat-tempest-plugin.spec.j2
@@ -15,6 +15,8 @@ Summary:       Tempest plugin for the heat project.
 License:       {{ license('Apache-2.0') }}
 Url:           https://git.openstack.org/cgit/openstack/{{ pypi_name }}
 Source0:       {{ source|basename }}
+# https://review.openstack.org/#/c/530460/
+Patch1:        0001-Add-endpoint_type-config-option.patch
 BuildRequires: openstack-macros
 BuildRequires: {{ py2pkg('devel') }}
 BuildRequires: {{ py2pkg('pbr') }}
@@ -55,7 +57,7 @@ It contains the documentation for the heat tempest tests.
 %endif
 
 %prep
-%autosetup -n {{ pypi_name }}-{{ upstream_version }}
+%autosetup -p 1 -n {{ pypi_name }}-{{ upstream_version }}
 
 # Let's handle dependencies ourseleves
 %py_req_cleanup
