--- a/openstack/python-manilaclient/python-manilaclient.spec.j2
+++ b/openstack/python-manilaclient/python-manilaclient.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'python-manilaclient' %}
-{% set upstream_version = upstream_version('1.21.0') %}
+{% set upstream_version = upstream_version('1.22.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -65,23 +65,20 @@ sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 %build
 %{python_build}
 
-%{__python2} setup.py build_sphinx --builder=html,man
+PBR_VERSION={{ upstream_version }} sphinx-build -b html doc/source doc/build/html
 # remove the sphinx-build leftovers
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
 
 %install
 %{python_install}
-# man page
-install -p -D -m 644 doc/build/man/python-manilaclient.1 %{buildroot}%{_mandir}/man1/manila.1
 # bash completion
 install -p -D -m 644 tools/manila.bash_completion %{buildroot}%{_sysconfdir}/bash_completion.d/manila.bash_completion
 %python_clone -a %{buildroot}%{_bindir}/manila
-%python_clone -a %{buildroot}%{_mandir}/man1/manila.1
 %python_clone -a %{buildroot}%{_sysconfdir}/bash_completion.d/manila.bash_completion
 
 %post
-%{python_install_alternative manila manila.1 %{_sysconfdir}/bash_completion.d/manila.bash_completion}
+%{python_install_alternative manila %{_sysconfdir}/bash_completion.d/manila.bash_completion}
 
 %postun
 %python_uninstall_alternative manila
@@ -102,7 +99,6 @@ $python setup.py testr
 %{python_sitelib}/manilaclient
 %{python_sitelib}/*.egg-info
 %python_alternative %{_bindir}/manila
-%python_alternative %{_mandir}/man1/manila.1
 %python_alternative %{_sysconfdir}/bash_completion.d/manila.bash_completion
 
 %files -n python-manilaclient-doc
