Update summary to be a noun phrase
Change-Id: I4a34943a9571e5b655af4752cdc94ad4a5eaa3f3

--- a/openstack/virtualbmc/virtualbmc.spec.j2
+++ b/openstack/virtualbmc/virtualbmc.spec.j2
@@ -6,7 +6,7 @@
 Name:           {{ py2name() }}
 Version:        {{ py2rpmversion() }}
 Release:        {{ py2rpmrelease() }}
-Summary:        Create virtual BMCs for controlling virtual instances via IPMI
+Summary:        Python module to create virtual BMCs for controlling virtual instances via IPMI
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            http://www.openstack.org/
