--- a/openstack/oslo.service/oslo.service.spec.j2
+++ b/openstack/oslo.service/oslo.service.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'oslo.service' %}
-{% set upstream_version = upstream_version('1.30.0') %}
+{% set upstream_version = upstream_version('1.31.3') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 %if 0%{?rhel} || 0%{?fedora}
@@ -34,6 +34,7 @@ BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('requests', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('six', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('Paste') }}
 Requires:       {{ py2pkg('PasteDeploy') }}
 Requires:       {{ py2pkg('Routes') }}
@@ -85,12 +86,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %{python_install}
 
 %check
-# FIXME(jpena): unlock unit tests on RDO once there is a newer version of python-cryptography
-%if 0%{?rdo} == 0
-%{python_expand rm -rf .testrepository
-PYTHON=$python $python setup.py testr
-}
-%endif
+%python_exec -m stestr.cli run
 
 %files %{python_files}
 %license LICENSE
