Dont package .pickl file
because it is not needed and will cause packages to differ for every build.

See https://reproducible-builds.org/ for why this matters.

Also dont use rm -f so we notice when we use the wrong path

Change-Id: Iea324d8d2ec2723b567270379c056d29a39e375f

--- a/openstack/aodhclient/aodhclient.spec.j2
+++ b/openstack/aodhclient/aodhclient.spec.j2
@@ -62,7 +62,7 @@ This package contains auto-generated documentation.
 
 PBR_VERSION=%{version} sphinx-build -b html doc/source doc/build/html
 # Fix hidden-file-or-dir warnings
-rm -rf html/.doctrees html/.buildinfo
+rm -r doc/build/html/.{doctrees,buildinfo}
 
 %check
 # FIXME: only run unittests for now.
