--- a/openstack/python-freezerclient/python-freezerclient.spec.j2
+++ b/openstack/python-freezerclient/python-freezerclient.spec.j2
@@ -68,7 +68,7 @@ sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 # Build HTML docs and man page
 PBR_VERSION={{ upstream_version }} sphinx-build -b html doc/source doc/build/html
-rm -rf html/.{doctrees,buildinfo}
+rm -r doc/build/html/.{doctrees,buildinfo}
 
 %install
 %{python_install}
