--- a/openstack/python-muranoclient/python-muranoclient.spec.j2
+++ b/openstack/python-muranoclient/python-muranoclient.spec.j2
@@ -71,6 +71,7 @@ sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 # Build HTML docs and man page
 PBR_VERSION=%version sphinx-build -b html doc/source doc/build/html
+rm -r doc/build/html/.{doctrees,buildinfo}
 
 %install
 %py2_install
