--- a/openstack/python-troveclient/python-troveclient.spec.j2
+++ b/openstack/python-troveclient/python-troveclient.spec.j2
@@ -64,7 +64,7 @@ sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 # Generate html docs
 PBR_VERSION=%version sphinx-build -b html doc/source doc/build/html
 # Remove the Sphinx-build leftovers
-rm -rf html/.{doctrees,buildinfo}
+rm -r doc/build/html/.{doctrees,buildinfo}
 
 %install
 %py2_install
