--- a/openstack/keystonemiddleware/keystonemiddleware.spec.j2
+++ b/openstack/keystonemiddleware/keystonemiddleware.spec.j2
@@ -7,6 +7,7 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            https://launchpad.net/%{sname}
 Source0:        https://files.pythonhosted.org/packages/source/k/%{sname}/%{sname}-%{version}.tar.gz
+BuildRequires:  openssl
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('WebOb') }}
 BuildRequires:  {{ py2pkg('WebTest') }}
@@ -22,7 +23,6 @@ BuildRequires:  {{ py2pkg('oslo.messaging') }}
 BuildRequires:  {{ py2pkg('oslo.serialization') }}
 BuildRequires:  {{ py2pkg('oslo.utils') }}
 BuildRequires:  {{ py2pkg('oslotest') }}
-BuildRequires:  {{ py2pkg('positional') }}
 BuildRequires:  {{ py2pkg('pycadf') }}
 BuildRequires:  {{ py2pkg('pycrypto') }}
 BuildRequires:  {{ py2pkg('python-memcached') }}
@@ -42,7 +42,6 @@ Requires:       {{ py2pkg('oslo.context') }}
 Requires:       {{ py2pkg('oslo.i18n') }}
 Requires:       {{ py2pkg('oslo.serialization') }}
 Requires:       {{ py2pkg('oslo.utils') }}
-Requires:       {{ py2pkg('positional') }}
 Requires:       {{ py2pkg('pycadf') }}
 Requires:       {{ py2pkg('python-memcached') }}
 Requires:       {{ py2pkg('requests') }}
