Remove Fedora workaround for unit tests
As discussed in [1], we are removing the Fedora workaround for unit
tests in oslo.concurrency and oslo.rootwrap, and replacing it by
explicitly setting the PYTHON environment variable in the unit
test execution.

[1] - https://review.openstack.org/570232

Change-Id: Iffc3d799027065fb5e14386b31045250fdbad043
Depends-On: I1c92888cf830b2ab5fdc154a0322e6e54d5712f7

--- a/openstack/oslo.concurrency/oslo.concurrency.spec.j2
+++ b/openstack/oslo.concurrency/oslo.concurrency.spec.j2
@@ -88,15 +88,11 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %python_uninstall_alternative lockutils-wrapper
 
 %check
-%if 0%{?fedora}
-# This env var is required to fix unit tests in Fedora 28 and later
-export PYTHON_DISALLOW_AMBIGUOUS_VERSION=0
-%endif
 %{python_expand rm -rf .testrepository
 # Test suite fails on 32 bit platforms
 # ifarch/ifnarch can not be used in noarch packages
 if [ "%_lib" = "lib64" ]; then
-$python setup.py testr
+PYTHON=$python $python setup.py testr
 fi
 }
 
