masakari: Update filelist for new master
Per I469d4b6df49ad3489722feae0b795c20a6a3913b masakari-wsgi was
added as a more flexible replacement for the eventlet based
masakari-api.

Change-Id: Iaed8b796d41a4efb3abed945ff9b8efa971260e8

--- a/openstack/masakari/masakari.spec.j2
+++ b/openstack/masakari/masakari.spec.j2
@@ -191,6 +191,7 @@ testr run --load-list=list
 %files api
 %{_bindir}/masakari-api
 %{_bindir}/masakari-manage
+%{_bindir}/masakari-wsgi
 %{_unitdir}/openstack-masakari-api.service
 
 %files engine
