--- a/openstack/mistral/mistral.spec.j2
+++ b/openstack/mistral/mistral.spec.j2
@@ -1,6 +1,6 @@
 {% set pypi_name = 'mistral' %}
-{% set source = fetch_source('http://tarballs.openstack.org/mistral/mistral-master.tar.gz') %}
-{% set upstream_version = upstream_version() %}
+{% set upstream_version = upstream_version('7.0.0.0b1') %}
+{% set source = url_pypi() %}
 {% set rpm_release = '1' %}
 %if 0%{?rhel} || 0%{?fedora}
 %global rdo 1
